# pdf-chat-hub

./: .cursorrules  .gitignore  README.md  TODO.md  instructions.md  justfile  package-lock.json  package.json
.github/workflows/: cd-backend.yaml  ci-backend.yaml  ci-frontend.yaml
backend/: .env_template  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  app.py  config.yml  debug.py  docker-compose.yaml  justfile  lambda_handler.py  main.py  pyproject.toml  settings.py
backend/brain/: document_processing.py  model_router.py  rag.py  summariser.py  vector_db.py
backend/dependencies/: services.py
backend/models/: api_models.py
backend/repositories/: session_db.py  vector_db.py
backend/routers/: router.py
backend/services/: pdf_chat_service.py
backend/test_payloads/: root-request.json
backend/tests/: conftest.py  test_lambda_handler.py
backend/tests/integration/: test_db.py  test_pdf_chat_service.py  test_vector_store.py
backend/tests/unit/: test_api_router.py  test_document_processing.py  test_pdf_chat_service.py
backend/utills/: db_utils.py
frontend/: .env.development  eslint.config.js  justfile  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.vue
frontend/src/components/: ChatPanel.vue  PdfSidebar.vue  PdfViewer.vue
frontend/src/services/: api.js
frontend/src/services/__tests__/: api.test.js
infrastructure/: .env_template  cloudfront.tf  ecr.tf  iam-policy.json  justfile  lambda.tf  outputs.tf  provider.tf  s3.tf  variables.tf
infrastructure/prod/: ecr.tf  iam.tf  lambda.tf  outputs.tf  provider.tf  rds.tf  s3.tf  secrets.tf  variables.tf  vpc.tf
research/: config.yml  justfile  main.py  pyproject.toml  rag_evals.ipynb  retrieval_tuning.py  router.py  summariser.py  text_splitter.ipynb  utils.py
research/brain/: document_processing.py  rag.py  vector_db.py
research/data/: qa_pairs.json
research/models/: api_models.py
research/notebooks/: rag_evals.ipynb  retrieval_tuning.ipynb  text_splitter.ipynb
research/routers/: router.py
research/services/: pdf_chat_service.py
test_payloads/: query-request.json
web_app/: .env.production  README.md  index.html  jsconfig.json  justfile  package-lock.json  package.json  vite.config.js
web_app/src/: App.vue
web_app/src/assets/: main.css
web_app/src/services/: api.js
