[tool.poetry]
name = "pdf-chat-research"
version = "0.1.0"
description = ""
authors = ["stephenCarmody <stephen.m.carmody@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.10"
langchain-community = "^0.3.10"
pymupdf = "^1.25.0"
langchain-openai = "^0.2.12"
faiss-cpu = "^1.9.0.post1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.3"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
python-multipart = "^0.0.19"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
