[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["stephenCarmody <stephen.m.carmody@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ipykernel = "^6.29.5"
pymupdf = "^1.25.2"
langchain = "^0.3.15"
langchain-openai = "^0.3.1"
langchain-experimental = "^0.3.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
